# tray-agent

./: CMakeLists.txt  Info.plist  Makefile  README.markdown  build.sh  icon.icns  main.m  open.sh  test.sh
.github/workflows/: build.yaml
